extensions/dear-imgui-test-engine-sys/src/bindings_pregenerated.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImGuiTestEngine {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImGuiTestEngineScript {
    _unused: [u8; 0],
}
pub const ImGuiTestEngineRunSpeed_Fast: ImGuiTestEngineRunSpeed = 0;
pub const ImGuiTestEngineRunSpeed_Normal: ImGuiTestEngineRunSpeed = 1;
pub const ImGuiTestEngineRunSpeed_Cinematic: ImGuiTestEngineRunSpeed = 2;
pub type ImGuiTestEngineRunSpeed = ::std::os::raw::c_int;
pub const ImGuiTestEngineVerboseLevel_Silent: ImGuiTestEngineVerboseLevel = 0;
pub const ImGuiTestEngineVerboseLevel_Error: ImGuiTestEngineVerboseLevel = 1;
pub const ImGuiTestEngineVerboseLevel_Warning: ImGuiTestEngineVerboseLevel = 2;
pub const ImGuiTestEngineVerboseLevel_Info: ImGuiTestEngineVerboseLevel = 3;
pub const ImGuiTestEngineVerboseLevel_Debug: ImGuiTestEngineVerboseLevel = 4;
pub const ImGuiTestEngineVerboseLevel_Trace: ImGuiTestEngineVerboseLevel = 5;
pub type ImGuiTestEngineVerboseLevel = ::std::os::raw::c_int;
pub const ImGuiTestEngineGroup_Unknown: ImGuiTestEngineGroup = -1;
pub const ImGuiTestEngineGroup_Tests: ImGuiTestEngineGroup = 0;
pub const ImGuiTestEngineGroup_Perfs: ImGuiTestEngineGroup = 1;
pub type ImGuiTestEngineGroup = ::std::os::raw::c_int;
pub const ImGuiTestEngineRunFlags_None: ImGuiTestEngineRunFlags = 0;
pub const ImGuiTestEngineRunFlags_GuiFuncDisable: ImGuiTestEngineRunFlags = 1;
pub const ImGuiTestEngineRunFlags_GuiFuncOnly: ImGuiTestEngineRunFlags = 2;
pub const ImGuiTestEngineRunFlags_NoSuccessMsg: ImGuiTestEngineRunFlags = 4;
pub const ImGuiTestEngineRunFlags_EnableRawInputs: ImGuiTestEngineRunFlags = 8;
pub const ImGuiTestEngineRunFlags_RunFromGui: ImGuiTestEngineRunFlags = 16;
pub const ImGuiTestEngineRunFlags_RunFromCommandLine: ImGuiTestEngineRunFlags = 32;
pub const ImGuiTestEngineRunFlags_NoError: ImGuiTestEngineRunFlags = 1024;
pub const ImGuiTestEngineRunFlags_ShareVars: ImGuiTestEngineRunFlags = 2048;
pub const ImGuiTestEngineRunFlags_ShareTestContext: ImGuiTestEngineRunFlags = 4096;
pub type ImGuiTestEngineRunFlags = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, Hash, PartialEq, Eq)]
pub struct ImGuiTestEngineResultSummary_c {
    pub CountTested: ::std::os::raw::c_int,
    pub CountSuccess: ::std::os::raw::c_int,
    pub CountInQueue: ::std::os::raw::c_int,
}
unsafe extern "C" {
    pub fn imgui_test_engine_create_context() -> *mut ImGuiTestEngine;
}
unsafe extern "C" {
    pub fn imgui_test_engine_destroy_context(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_get_ui_context_target(
        engine: *mut ImGuiTestEngine,
    ) -> *mut ImGuiContext;
}
unsafe extern "C" {
    pub fn imgui_test_engine_is_bound(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_is_started(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_unbind(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_start(engine: *mut ImGuiTestEngine, ui_ctx: *mut ImGuiContext);
}
unsafe extern "C" {
    pub fn imgui_test_engine_stop(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_post_swap(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_show_windows(engine: *mut ImGuiTestEngine, p_open: *mut bool);
}
unsafe extern "C" {
    pub fn imgui_test_engine_queue_tests(
        engine: *mut ImGuiTestEngine,
        group: ImGuiTestEngineGroup,
        filter: *const ::std::os::raw::c_char,
        run_flags: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_is_test_queue_empty(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_try_abort_engine(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_abort_current_test(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_get_result_summary(
        engine: *mut ImGuiTestEngine,
        out_summary: *mut ImGuiTestEngineResultSummary_c,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_set_run_speed(
        engine: *mut ImGuiTestEngine,
        speed: ImGuiTestEngineRunSpeed,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_set_verbose_level(
        engine: *mut ImGuiTestEngine,
        level: ImGuiTestEngineVerboseLevel,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_set_capture_enabled(engine: *mut ImGuiTestEngine, enabled: bool);
}
unsafe extern "C" {
    pub fn imgui_test_engine_is_running_tests(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_is_requesting_max_app_speed(engine: *mut ImGuiTestEngine) -> bool;
}
unsafe extern "C" {
    pub fn imgui_test_engine_install_default_crash_handler();
}
unsafe extern "C" {
    pub fn imgui_test_engine_register_default_tests(engine: *mut ImGuiTestEngine);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_create() -> *mut ImGuiTestEngineScript;
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_destroy(script: *mut ImGuiTestEngineScript);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_set_ref(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_click(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_click_with_button(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_double_click(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_open(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_close(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_check(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_uncheck(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_input_int(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        v: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_input_str(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        v: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_move(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_move_to_pos(
        script: *mut ImGuiTestEngineScript,
        x: f32,
        y: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_teleport_to_pos(
        script: *mut ImGuiTestEngineScript,
        x: f32,
        y: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_move_to_void(script: *mut ImGuiTestEngineScript);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_click(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_click_multi(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
        count: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_double_click(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_down(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_up(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_lift_drag_threshold(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_drag_with_delta(
        script: *mut ImGuiTestEngineScript,
        dx: f32,
        dy: f32,
        button: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_click_on_void(
        script: *mut ImGuiTestEngineScript,
        button: ::std::os::raw::c_int,
        count: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_mouse_wheel(
        script: *mut ImGuiTestEngineScript,
        dx: f32,
        dy: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_down(
        script: *mut ImGuiTestEngineScript,
        key_chord: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_up(
        script: *mut ImGuiTestEngineScript,
        key_chord: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_press(
        script: *mut ImGuiTestEngineScript,
        key_chord: ::std::os::raw::c_int,
        count: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_hold(
        script: *mut ImGuiTestEngineScript,
        key_chord: ::std::os::raw::c_int,
        time_in_seconds: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_sleep(script: *mut ImGuiTestEngineScript, time_in_seconds: f32);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_chars(
        script: *mut ImGuiTestEngineScript,
        chars: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_chars_append(
        script: *mut ImGuiTestEngineScript,
        chars: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_chars_append_enter(
        script: *mut ImGuiTestEngineScript,
        chars: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_chars_replace(
        script: *mut ImGuiTestEngineScript,
        chars: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_key_chars_replace_enter(
        script: *mut ImGuiTestEngineScript,
        chars: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_hold(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        time_in_seconds: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_hold_for_frames(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_drag_over_and_hold(
        script: *mut ImGuiTestEngineScript,
        ref_src: *const ::std::os::raw::c_char,
        ref_dst: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_drag_and_drop(
        script: *mut ImGuiTestEngineScript,
        ref_src: *const ::std::os::raw::c_char,
        ref_dst: *const ::std::os::raw::c_char,
        button: ::std::os::raw::c_int,
    );
}
